--- a/packages/components/s-date-picker-component/index.html
+++ b/packages/components/s-date-picker-component/index.html
@@ -13,8 +13,72 @@
 
             webcomponent();
         </script>
-        <s-date-picker class="s-ui--accent" style="width: 600px" name="my-date-picker" default-style></s-date-picker>
 
-        <s-date-picker class="s-ui--complementary" name="my-date-picker1" default-style></s-date-picker>
+        <div class="s-p--100">
+            <label class="s-label s-mb--30">
+                Min and max date
+                <s-date-picker
+                    mount-when="interact"
+                    placeholder="Select a date"
+                    class="s-ui--accent s-width--50"
+                    min-date="2021-08-10"
+                    max-date="2021-08-20"
+                    name="myDatePicker2"
+                    default-style
+                ></s-date-picker>
+            </label>
+
+            <label class="s-label s-mb--30">
+                Disable weekends
+                <s-date-picker
+                    placeholder="Select a date"
+                    class="s-ui--complementary s-width--50"
+                    name="myDatePicker3"
+                    disable-weekends
+                    default-style
+                ></s-date-picker>
+            </label>
+
+            <label class="s-label s-mb--30">
+                RTL support
+                <s-date-picker
+                    placeholder="Select a date"
+                    class="s-ui--accent s-width--50"
+                    min-date="2021-08-10"
+                    name="myDatePicker1"
+                    rtl
+                    default-style
+                ></s-date-picker>
+            </label>
+
+            <label class="s-label s-mb--30">
+                Display more than 1 month
+                <s-date-picker
+                    placeholder="Select a date"
+                    class="s-ui--success s-width--50"
+                    name="myDatePicker4"
+                    number-of-months="2"
+                    default-style
+                ></s-date-picker>
+            </label>
+
+            <label class="s-label s-mb--30">
+                Custom calendar icon
+                <s-date-picker
+                    placeholder="Select a date"
+                    class="s-ui--error s-width--50"
+                    name="myDatePicker5"
+                    calendar-icon="<?xml version='1.0' encoding='iso-8859-1'?>
+<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 488.901 488.901' style='enable-background:new 0 0 488.901 488.901;' xml:space='preserve'><g><g><g><path fill='currentColor' d='M468.9,56.1h-76.2v-36c0-10.6-9.5-20.1-20.1-20.1s-20.1,8.5-20.1,20.1v36H136.6v-36c0-10.6-9.5-20.1-20.1-20.1
+				S96.4,8.5,96.4,20.1v36H20.1C9.5,56.1,0,64.6,0,76.2v392.6c0,10.6,8.5,20.1,20.1,20.1h329.1c5.3,0,9.5-1.1,13.8-5.3l119.6-111.1
+				c4.2-4.2,6.3-9.5,6.3-14.8V76.2C489,65.6,480.5,56.1,468.9,56.1z M40.2,96.3h408.5v241.3H348.2c-10.6,0-20.1,8.5-20.1,20.1v91
+				H40.2V96.3z M417.7,377.8l-48.4,44.6v-44.6H417.7z'/></g><path fill='currentColor' d='M286.3,256.1c8.7-9.8,13.9-22.7,13.9-36.8c0-30.7-25-55.7-55.7-55.7s-55.7,25-55.7,55.7c0,14.1,5.3,27,13.9,36.8
+			c-13,11.6-21.2,28.4-21.2,47.1c0,34.7,28.3,63,63,63s63-28.3,63-63C307.5,284.5,299.3,267.7,286.3,256.1z M244.5,198.6
+			c11.4,0,20.7,9.3,20.7,20.7s-9.3,20.7-20.7,20.7s-20.7-9.3-20.7-20.7S233.1,198.6,244.5,198.6z M244.5,331.3
+			c-15.4,0-28-12.6-28-28s12.6-28,28-28s28,12.6,28,28S259.9,331.3,244.5,331.3z'/></g></g><g></svg>"
+                    default-style
+                ></s-date-picker>
+            </label>
+        </div>
     </body>
 </html>
