--- a/packages/websites/coffeekraken-io/src/css/index.css
+++ b/packages/websites/coffeekraken-io/src/css/index.css
@@ -67,7 +67,7 @@ a:active {
     @sugar.theme (dark);
 }
 
-[class*='s-btn'] {
+[class*='s-btn']:not(s-date-picker [class*='s-btn']) {
     border-radius: 100px !important;
     border: none !important;
 }
