--- a/packages/components/s-date-picker-component/src/css/s-date-picker-theme.css
+++ b/packages/components/s-date-picker-component/src/css/s-date-picker-theme.css
@@ -12,7 +12,8 @@
     border: 1px solid sugar.color(ui, border);
     @sugar.depth (100);
     border-radius: sugar.theme(ui.colorPicker.borderRadius);
-    padding: sugar.theme(ui.colorPicker.padding);
+    padding-inline: sugar.scalable(sugar.theme(ui.colorPicker.paddingInline));
+    padding-block: sugar.scalable(sugar.theme(ui.colorPicker.paddingBlock));
 }
 
 .s-pikaday .pika-label {
@@ -68,7 +69,8 @@
 .s-pikaday .pika-table {
     background: sugar.color(main, background);
     border-radius: sugar.theme(ui.colorPicker.borderRadius);
-    padding: sugar.theme(ui.colorPicker.padding);
+    padding-inline: sugar.scalable(sugar.theme(ui.colorPicker.paddingInline));
+    padding-block: sugar.scalable(sugar.theme(ui.colorPicker.paddingBlock));
 }
 
 .s-pikaday .pika-table th * {
@@ -79,7 +81,8 @@
 .s-pikaday .pika-button {
     background: sugar.color(main, background);
     color: sugar.color(main, text);
-    padding: sugar.theme(ui.colorPicker.padding);
+    padding-inline: sugar.scalable(sugar.theme(ui.colorPicker.paddingInline));
+    padding-block: sugar.scalable(sugar.theme(ui.colorPicker.paddingBlock));
 }
 
 .s-pikaday .pika-week {
