--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -104,7 +104,7 @@ body {
         }
 
         li:hover,
-        s-activate[active] li {
+        li[active] {
             background-color: sugar.color(accent);
             color: sugar.color(accent, foreground);
         }
