--- a/packages/components/s-code-example-component/index.html
+++ b/packages/components/s-code-example-component/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + TS + Vite App</title>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Svelte + TS + Vite App</title>
 
-    <link rel="stylesheet" type="text/css" href="src/css/index.css" />
+        <link rel="stylesheet" type="text/css" href="src/css/index.css" />
+    </head>
+    <body>
+        <script type="module">
+            import __css from './src/css/index.css';
+            import SCodeExample, { webcomponent } from './src/js/index.ts';
+            webcomponent();
+        </script>
 
-  </head>
-  <body>
-    <script type="module">
-      import __css from './src/css/index.css';
-      import SCodeExample, { webcomponent } from './src/js/index.ts';
-      webcomponent();
-    </script>
-    
-    <s-code-example toolbar-position="nav" default-style>
-      <template lang="js">
-        import __SClass from '@coffeekraken/s-class'; import __deepMerge from
-        '@coffeekraken/sugar/shared/object/deepMerge'; import __SInterface from
-        '@coffeekraken/s-interface'; import __mustache from 'mustache'; import
-        __stylesheetToString from '@coffeekraken/sugar/js/css/stylesheetToString';
-        export default SSVelteComponent;
-      </template>
-      <template lang="html">
-        <h1>Something cool</h1>
-        <p>iwfj wioef oiw efjoijw oiefjw ioefjwiofj oij</p>
-      </template>
-    </s-code-example>
-
-  </body>
+        <s-code-example toolbar-position="nav" default-style>
+            <template lang="js">
+                import __SClass from '@coffeekraken/s-class'; import __deepMerge from
+                '@coffeekraken/sugar/shared/object/deepMerge'; import __SInterface from '@coffeekraken/s-interface';
+                import __mustache from 'mustache'; import __stylesheetToString from
+                '@coffeekraken/sugar/js/css/stylesheetToString'; export default SSVelteComponent;
+            </template>
+            <template lang="html">
+                <h1>Something cool</h1>
+                <p>iwfj wioef oiw efjoijw oiefjw ioefjwiofj oij</p>
+            </template>
+        </s-code-example>
+    </body>
 </html>
