--- a/packages/components/s-color-picker-component/index.html
+++ b/packages/components/s-color-picker-component/index.html
@@ -9,9 +9,9 @@
     <body>
         <script type="module">
             import __css from './src/css/index.css';
-            import { webcomponent } from './src/js/index.ts';
+            import { define } from './src/js/index.ts';
 
-            webcomponent();
+            define();
         </script>
         <s-color-picker color="#ffff00" default-style />
     </body>
