--- a/packages/components/s-date-picker-component/index.html
+++ b/packages/components/s-date-picker-component/index.html
@@ -9,9 +9,9 @@
     <body>
         <script type="module">
             import __css from './src/css/index.css';
-            import { webcomponent } from './src/js/index.ts';
+            import { define } from './src/js/index.ts';
 
-            webcomponent();
+            define();
         </script>
 
         <div class="s-p--100">
