--- a/packages/components/s-range-component/index.html
+++ b/packages/components/s-range-component/index.html
@@ -5,6 +5,8 @@
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Range component</title>
+
+        <link rel="stylesheet" href="http://coffeekraken.io/dist/css/style.css" />
     </head>
     <body>
         <script type="module">
