--- a/packages/components/s-config-explorer/index.html
+++ b/packages/components/s-config-explorer/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue js component</title>
-  </head>
-  <body>
-    <script type="module">
-      import SConfigExplorer, { webcomponent } from './src/js/index.ts';
-      
-      webcomponent();
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Vue js component</title>
+    </head>
+    <body>
+        <script type="module">
+            import SConfigExplorer, { define } from './src/js/index.ts';
 
-    </script>
+            define();
+        </script>
 
-    <s-config-explorer default-style />
-
-  </body>
+        <s-config-explorer default-style />
+    </body>
 </html>
