--- a/packages/websites/coffeekraken-io/src/views/generic/search-input/search-input.css
+++ b/packages/websites/coffeekraken-io/src/views/generic/search-input/search-input.css
@@ -2,32 +2,29 @@
     width: 300px;
     z-index: 100;
 
-    /* input {
-        @sugar.theme(dark);
-    } */
-
-    input, s-filtrable-input {
+    input,
+    s-filtrable-input {
         width: 100%;
-        transition: all .1s ease-in-out;
+        transition: all 0.1s ease-in-out;
     }
 
     s-filtrable-input {
         width: 300px;
-        right:0;
+        right: 0;
         position: absolute;
         transform: translateY(-50%);
-        transition: all .1s ease-in-out .2s;
+        transition: all 0.1s ease-in-out 0.2s;
 
         .s-filtrable-input__list {
             opacity: 0;
-            transition: all .2s ease-in-out 0s;
+            transition: all 0.2s ease-in-out 0s;
             margin-bottom: sugar.space(70);
             top: calc(100% + sugar.space(10)) !important;
             background: white;
             width: 100%;
 
             @sugar.border.radius;
-            @sugar.scrollbar(accent, 2px);
+            @sugar.scrollbar (accent, 2px);
         }
         .s-filtrable-input__list-item {
             /* @sugar.depth(20); */
@@ -53,19 +50,19 @@
             }
 
             &:nth-child(odd) {
-               &:before {
-                content: '';
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 70%;
-                width: 30%;
-                height: 100%;
-                z-index: -1;
-                background: sugar.color(ui, surface);
-                transform: scaleX(-1);
-                clip-path: polygon(0 0%, 100% 0, calc(100% - 100px) 100%, 0 100%);
-                } 
+                &:before {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    left: 70%;
+                    width: 30%;
+                    height: 100%;
+                    z-index: -1;
+                    background: sugar.color(ui, surface);
+                    transform: scaleX(-1);
+                    clip-path: polygon(0 0%, 100% 0, calc(100% - 100px) 100%, 0 100%);
+                }
             }
 
             /* .__bg {
@@ -115,7 +112,6 @@
                     }
                 }
             } */
-
         }
     }
 
@@ -131,29 +127,25 @@
         pointer-events: none;
         transition: opacity .1s ease-out .2s;
     } */
-
 }
 #search-form:focus-within {
-
     s-filtrable-input {
         width: 100%;
-        transition: all .1s ease-in-out;
+        transition: all 0.1s ease-in-out;
 
         .s-filtrable-input__list {
             width: 100%;
             opacity: 1;
-            transition: all .2s ease-in-out .5s;
-
-            
+            transition: all 0.2s ease-in-out 0.5s;
         }
         .s-filtrable-input__list-item {
             width: 100%;
             /* margin-top: 3px; */
         }
-    }       
+    }
 
     &:before {
-        opacity: .9;
+        opacity: 0.9;
         pointer-events: all;
     }
 }
