--- a/packages/components/s-date-picker-component/src/css/s-date-picker.css
+++ b/packages/components/s-date-picker-component/src/css/s-date-picker.css
@@ -14,6 +14,7 @@ s-date-picker {
 .s-date-picker__button {
     padding-inline: sugar.scalable(sugar.theme(ui.datePicker.paddingInline));
     padding-block: sugar.scalable(sugar.theme(ui.datePicker.paddingBlock));
+    cursor: pointer;
 }
 
 s-date-picker[default-style] {
