--- a/packages/components/s-date-picker-component/src/css/s-date-picker-theme.css
+++ b/packages/components/s-date-picker-component/src/css/s-date-picker-theme.css
@@ -102,7 +102,7 @@
 
 .s-pikaday .is-disabled .pika-button {
     color: sugar.color(main, text);
-    opacity: 0.3;
+    @sugar.disabled;
 }
 
 .s-pikaday .pika-button:hover {
