--- a/packages/websites/coffeekraken-io/src/views/pages/doc/list.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/doc/list.css
@@ -4,7 +4,7 @@
         top: 100px;
         max-height: calc(100vh - 100px);
         overflow: auto;
-        @sugar.scrollbar (accent, 2px);
+        @sugar.scrollbar();
     }
 
     .__list-item {
@@ -56,7 +56,12 @@
                 z-index: 0;
                 /* transform: translateX(calc(-100% - 400px)); */
                 background: sugar.color(current, --lighten 49);
-                clip-path: polygon(-0 0%, 100% 0, calc(100% - 200px) 100%, 0% 100%);
+                clip-path: polygon(
+                    -0 0%,
+                    100% 0,
+                    calc(100% - 200px) 100%,
+                    0% 100%
+                );
             }
         }
     }
