--- a/packages/websites/coffeekraken-io/src/css/generic/typo.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/typo.css
@@ -1,6 +1,6 @@
 .s-typo--lead,
 .s-typo--p:not(.s-dropdown .s-typo--p) {
-    color: sugar.color(main, --lighten 20);
+    /* color: sugar.color(main, --lighten 20); */
 }
 
 strong {
